use histogram to collect stats in CatalogAnalyzer